# soepviewer

./: .gitignore  README.md  pyproject.toml  testing.ipynb
soepversionizer/: __init__.py  algorithms.py  const.py  data.py  database.py  nav_elements.py  questionnaireview.py  questionview.py  screen_elements.py  soepversionizer.py
soepversionizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
soepviewer/: __init__.py  algorithms.py  data.py  database.py  input_handlers.py  layout.py  nav_elements.py  questionnaireview.py  questionview.py  similarity_widgets.py  soepviewer.py  utils.py  viewer.py
