[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soepversionizer"
version = "0.1.0"
dependencies = [
  "pandas",
]
requires-python = ">=3.8"
authors = [
  {name = "Christoph Halbmeier", email = "c.halbmeier@gmx.de"},
]
maintainers = [
  {name = "Christoph Halbmeier", email = "c.halbmeier@gmx.de"}
]

description = "A package to facilitate the versioning of variable names in SOEP metadata."
readme = "README.md"