[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soepviewer"
version = "v0.1.1"
authors = [
  {name = "Christoph Halbmeier"},
]
maintainers = [
  {name = "Christoph Halbmeier"}
]
description = "An app to facilitate the work with SOEP metadata."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "Levenshtein",
  "pandas",
  "platformdirs",
  "soepdoku>=0.1.6",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.scripts]
soepviewer = "soepviewer:main"

[project.urls]
Homepage = "https://github.com/chalbmeier/soepviewer"
Issues = "https://github.com/chalbmeier/soepviewer/issues"
